macOS上で動くよう修正